Made links absolute Requiring js/css for home or for pages

--- a/quirkey_code.html
+++ b/quirkey_code.html
@@ -6,10 +6,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <title>.: Quirkey.com :: {{ page.title }} :: Code :: Quirkey NYC, LLC :: Aaron Quint :: Web Developer :: Brooklyn, NY :.</title>
-  <link rel="stylesheet" href="stylesheets/quirkey.css" type="text/css" media="screen" charset="utf-8" />
-  <link rel="stylesheet" href="stylesheets/syntax.css" type="text/css" media="screen" charset="utf-8" />
-  <script src="javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
-  <script src="javascripts/quirkey.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="/stylesheets/quirkey.css" type="text/css" media="screen" charset="utf-8" />
+  {% if !page.github_name %}
+  <link rel="stylesheet" href="/stylesheets/home.css" type="text/css" media="screen" charset="utf-8" />
+  {% else %}
+  <link rel="stylesheet" href="/stylesheets/pages.css" type="text/css" media="screen" charset="utf-8" />
+  {% endif %}
+  <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/javascripts/quirkey.js" type="text/javascript" charset="utf-8"></script>
+  {% if !page.github_name %}
+  <script src="/javascripts/github.js" type="text/javascript" charset="utf-8"></script>
+  {% endif %}
 </head>
 
 <body>
@@ -17,7 +25,7 @@
   <div id="container">
     <div id="header_holder">
       <div id="header">
-        <div id="logo" class="quirkey_nav_open"><img src="images/logo.png" width="224" height="215" alt="Logo"/></div>
+        <div id="logo" class="quirkey_nav_open"><img src="/images/logo.png" width="224" height="215" alt="Logo"/></div>
         <h1>Quirkey<a href="/" class="q_code">Code</a></h1>
         <div id="quirkey_nav" style="display: none;">
           <h1 class="quirkey_portfolio">Quirkey<a href="http://portfolio.quirkey.com/" class="q_portfolio">Portfolio</a><span class="description">Selected work.</span></h1>
@@ -29,7 +37,9 @@
       <div class="quirkey_nav_close" style="display:none;"><a href="#">^</a></div>
     </div>
     <div id="main">
+        {% if page.current_version %}
         <div id="latest_version"><a href="#installing">{{ page.current_version }}</a></div>
+        {% endif %}
         {% if page.nav %}
         <ul id="pagenav">
           {% for nav in page.nav %}
