--- a/quirkey_code.html
+++ b/quirkey_code.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-  <title>.: Quirkey.com :: {{ page.title }} :: Code :: Quirkey NYC, LLC :: Aaron Quint :: Web Developer :: Brooklyn, NY :.</title>
+  <title>.: Quirkey.com :: Code :: {{ page.title }} :: Quirkey NYC, LLC :: Aaron Quint :: Web Developer :: Brooklyn, NY :.</title>
   <link rel="stylesheet" href="/stylesheets/quirkey.css" type="text/css" media="screen" charset="utf-8" />
   {% if page.github_name == 'home' %}
   <link rel="stylesheet" href="/stylesheets/home.css" type="text/css" media="screen" charset="utf-8" />
