--- a/quirkey_code_multi.html
+++ b/quirkey_code_multi.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/stylesheets/quirkey.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="/stylesheets/pages.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="/stylesheets/api.css" type="text/css" media="screen" charset="utf-8" />
   <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/quirkey.js" type="text/javascript" charset="utf-8"></script>
 </head>
