--- a/sammyjs-redirect.html
+++ b/sammyjs-redirect.html
@@ -31,6 +31,7 @@
       <div class="quirkey_nav_close" style="display:none;"><a href="#">^</a></div>
     </div>
     <div id="main">
+      <h2>THE SITE HAS MOVED TO <a href="http://sammyjs.org">Sammyjs.org</a>. YOU ARE BEING REDIRECTED</h2>
       {% if page.current_version %}
       <div id="latest_version"><a href="#installing">{{ page.current_version }}</a></div>
       {% endif %}
